--- a/amdvlk/PKGBUILD
+++ b/amdvlk/PKGBUILD
@@ -77,7 +77,7 @@ package() {
   install xgl/builds/Release64/icd/amdvlk64.so "${pkgdir}"/usr/lib/
   install AMDVLK/json/Redhat/amd_icd64.json "${pkgdir}"/usr/share/vulkan/icd.d/
   install AMDVLK/LICENSE.txt "${pkgdir}"/usr/share/licenses/amdvlk/
-  install amdPalSettings.cfg ${pkgdir}/etc/amd/
+  install amdPalSettings.cfg "${pkgdir}"/etc/amd/
 
   sed -i "s/\/lib64/\/lib/g" "${pkgdir}"/usr/share/vulkan/icd.d/amd_icd64.json
 }
